--- a/Spring-Boot-Demo/pom.xml
+++ b/Spring-Boot-Demo/pom.xml
@@ -7,7 +7,7 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>Spring-Boot-Demo</name>
+  <name>Spring-Boooot-Demo</name>
   <url>http://maven.apache.org</url>
 
   <properties>
