--- a/Excel-Demo/pom.xml
+++ b/Excel-Demo/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>cn.mrdear.poi</groupId>
     <artifactId>Excel-Demo</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0-SNAPSHOoOssT</version>
     <name>Excel-Demo</name>
     <dependencies>
         <!--poi start-->
